done remove acc card, calendar

--- a/public/admin.html
+++ b/public/admin.html
@@ -775,7 +775,7 @@
                     </div>
                 </form>
             </div>
-            
+
             <div class="modal__body__box modal__body__box--admin admin-edit-account">
                 <form id="form-edit-account" class="form2">
                     <div class="row__title__table">
@@ -793,7 +793,8 @@
                         <div class="row__content row__content__edit">
                             <span class="row__content__input" name="maKH"></span>
                             <i class="fa-solid fa-arrow-right"></i>
-                            <input class="row__content__input" type="text" placeholder="....." value="" name="maKH" readonly>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maKH"
+                                readonly>
                         </div>
                     </div>
                     <div class="row row__edit">
@@ -855,7 +856,8 @@
                         <div class="row__content row__content__edit">
                             <span class="row__content__input" name="maKH"></span>
                             <i class="fa-solid fa-arrow-right"></i>
-                            <input class="row__content__input" type="text" placeholder="....." value="" name="maThe" readonly>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maThe"
+                                readonly>
                         </div>
                     </div>
                     <div class="row row__edit">
@@ -865,7 +867,8 @@
                         <div class="row__content row__content__edit">
                             <span class="row__content__input" name="maKH"></span>
                             <i class="fa-solid fa-arrow-right"></i>
-                            <input class="row__content__input" type="text" placeholder="....." value="" name="maKH" readonly>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maKH"
+                                readonly>
                         </div>
                     </div>
                     <div class="row row__edit" style="display: none">
@@ -957,7 +960,8 @@
                         <div class="row__content row__content__edit">
                             <span class="row__content__input" name="maKH"></span>
                             <i class="fa-solid fa-arrow-right"></i>
-                            <input class="row__content__input" type="text" placeholder="....." value="" name="maLT" readonly>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maLT"
+                                readonly>
                         </div>
                     </div>
                     <div class="row row__edit">
@@ -967,7 +971,8 @@
                         <div class="row__content row__content__edit">
                             <span class="row__content__input" name="maKH"></span>
                             <i class="fa-solid fa-arrow-right"></i>
-                            <input class="row__content__input" type="text" placeholder="....." value="" name="maThe" readonly>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maThe"
+                                readonly>
                         </div>
                     </div>
                     <div class="row row__edit" style="display: none">
@@ -1051,6 +1056,115 @@
                         </div>
                     </div>
                 </form>
+            </div>
+            <div class="modal__body__box modal__body__box--admin admin-remove-account">
+                <div id="form-edit-calendar" class="form2">
+                    <div class="row__title__table">
+                        <div class="row__title__table__content">
+                            Xóa tài khoản
+                        </div>
+                        <div class="x__cancel">
+                            <i class="fa-regular fa-circle-xmark"></i>
+                        </div>
+                    </div>
+                    <div class="row row__remove">
+                        <div class="row__title">
+                            Mã khách hàng:
+                        </div>
+                        <div class="row__title row__title2"></div>
+                    </div>
+
+                    <div class="row row__remove">
+                        <div class="row__title">
+                            Tên khách hàng:
+                        </div>
+                        <div class="row__title row__title2">
+
+                        </div>
+                    </div>
+                    <span class="row__note">Chú ý: Xóa tài khoản đồng nghĩa với việc xóa cả thẻ thành viên và lịch tập
+                        của
+                        khách hàng</span>
+                    <div class="row__final">
+                        <div class="row__final__button">
+                            <button class="button__form" type="">
+                                Xóa
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal__body__box modal__body__box--admin admin-remove-card">
+                <div id="form-edit-calendar" class="form2">
+                    <div class="row__title__table">
+                        <div class="row__title__table__content">
+                            Xóa thẻ thành viên
+                        </div>
+                        <div class="x__cancel">
+                            <i class="fa-regular fa-circle-xmark"></i>
+                        </div>
+                    </div>
+                    <div class="row row__remove">
+                        <div class="row__title">
+                            Mã Thẻ:
+                        </div>
+                        <div class="row__title row__title2"></div>
+                    </div>
+
+                    <div class="row row__remove">
+                        <div class="row__title">
+                            Tên khách hàng:
+                        </div>
+                        <div class="row__title row__title2">
+
+                        </div>
+                    </div>
+                    <span class="row__note">Chú ý: Xóa thẻ thành viên đồng nghĩa với việc xóa cả lịch tập
+                        của
+                        khách hàng</span>
+                    <div class="row__final">
+                        <div class="row__final__button">
+                            <button class="button__form" type="">
+                                Xóa
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal__body__box modal__body__box--admin admin-remove-calendar">
+                <div id="form-edit-calendar" class="form2">
+                    <div class="row__title__table">
+                        <div class="row__title__table__content">
+                            Xóa lịch tập
+                        </div>
+                        <div class="x__cancel">
+                            <i class="fa-regular fa-circle-xmark"></i>
+                        </div>
+                    </div>
+                    <div class="row row__remove">
+                        <div class="row__title">
+                            Mã lịch tập:
+                        </div>
+                        <div class="row__title row__title2"></div>
+                    </div>
+
+                    <div class="row row__remove">
+                        <div class="row__title">
+                            Tên khách hàng:
+                        </div>
+                        <div class="row__title row__title2">
+
+                        </div>
+                    </div>
+                    <span class="row__note">Chú ý: Hành động không thể khôi phục</span>
+                    <div class="row__final">
+                        <div class="row__final__button">
+                            <button class="button__form" type="">
+                                Xóa
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
