--- a/public/navigation/chatbox.html
+++ b/public/navigation/chatbox.html
@@ -8,23 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../font/fontawesome-free-6.4.0-web/css/all.min.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/tien.css">
-    <link rel="stylesheet" href="../css/tu.css">
-    <link rel="stylesheet" href="../css/van.css">
-    <link rel="stylesheet" href="../css/quyen.css">
-    <link rel="stylesheet" href="../css/keyframes.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../navigation_css/toast.css">
     <link rel="stylesheet" href="../navigation_css/login.css">
     <link rel="stylesheet" href="../navigation_css/chatbox.css">
@@ -35,135 +23,146 @@
 
 <body>
     <div class="app">
-        <!-- LUU SY TRUONG -->
         <div class="header">
-            <div class="header__inner">
-                <div class="header__inner__logo">
-                    <a href="../index.html">
-                        <h1>GYM<span>Z</span></h1>
-                    </a>
+            <div class="header-wrapper">
+                <div class="header-logo">
+                    <h1>
+                        GYM
+                        <span>
+                            Z
+                        </span>
+                    </h1>
                 </div>
-                <!-- Thanh dieu huong -->
-                <div class="header__inner__navigation">
-                    <ul>
-                        <li><a class="header__inner__navigation__sevice" href="../index.html"><span>TRANG CHỦ</span></a>
-                        </li>
-                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">CHAT
-                                ONLINE</a>
-                        </li>
-                        <li>
-                            <div class="dropdown">
-                                <a class="header__inner__navigation__sevice">
-                                    DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
+                <div class="header-nav-bar">
+                    <div class="header-nav home">
+                        <a href="../index.html">
+                            <span>TRANG CHỦ</span>
+                        </a>
+                    </div>
+                    <div class="header-nav chat">
+                        <a href="../navigation/chatbox.html">
+                            CHAT ONLINE
+                        </a>
+                    </div>
+                    <div class="header-nav service">
+                        <span>
+                            DỊCH VỤ
+                            <i class="fa-solid fa-play"></i>
+                        </span>
+                        <div class="drop-content">
+                            <div class="content-service">
+                                <a href="../navigation/personal_trainer.html">
+                                    HUẤN LUYỆN VIÊN
                                 </a>
-                                <div class="containt">
-                                    <a href="./personal_trainer.html">HUẤN LUYỆN VIÊN</a>
-                                    <a href="./shop.html">CỬA HÀNG WHEY</a>
-                                </div>
                             </div>
-                        </li>
-                        <li><a class="header__inner__navigation__sevice" href="./card.html">THẺ HỘI VIÊN</a>
-                        </li>
-                    </ul>
+                            <div class="content-service">
+                                <a href="../navigation/shop.html">
+                                    CỬA HÀNG WHEY
+                                </a>
+                            </div>
+                            <div class="content-service">
+                                <a href="../navigation/card.html">
+                                    THẺ HỘI VIÊN
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="header-nav promotion">
+                        <a href="../navigation/promotion.html">
+                            KHUYẾN MÃI
+                        </a>
+                    </div>
                 </div>
-                <div class="header__inner__try">
-                    <ul>
-                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
-                    </ul>
-                </div>
-                <div class="header__inner__login">
-                    <ul class="header__inner__login__inner">
-                        <li class="submenu__login">
-                            <a class="account-avt account" href="#">
-                            </a>
-                            <ul class="submenu__login__content">
-                                <i class="fa-solid fa-caret-up"></i>
-                                <div class="status__account">
-                                    <a class="loginstatus status" href="#">
-                                        ĐĂNG NHẬP
-                                    </a>
-                                    <a class="status status__link" href="./information_account.html">
-                                        THÔNG TIN TÀI KHOẢN
-                                    </a>
-                                    <a class="status status__link" href="./information_card_TS.html">
-                                        THẺ THÀNH VIÊN & LT
-                                    </a>
-                                    <button class="logoutstatus status" type="submit">
-                                        ĐĂNG XUẤT
-                                    </button>
-                                </div>
-                            </ul>
-                        </li>
-                    </ul>
+                <div class="header-login">
+                    <div class="user">
+                        <img class="user-avatar" src="../img/icon/avatar.png" alt="">
+                        <div class="submenu-login">
+                            <ion-icon name="caret-up-sharp"></ion-icon>
+                            <div class="menu-login">
+                                <a href="#">
+                                    Đăng nhập
+                                </a>
+                                <a href="../navigation/information_account.html">
+                                    Thẻ thành viên
+                                </a>
+                                <a href="../navigation/information_card_TS.html">
+                                    Lịch tập
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="header__inner__menu">
-                    <div class="bt_dropdown">
-                        <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
-                            <i class='bx bx-menu'></i>
-                        </a>
-                        <div class="content">
-                            <div class="logo" id="menu2-infor">
-                                <ul class="account__login__center">
-                                    <li class="account__login">
-                                        <a class="account__login__inner">
-                                        </a>
-                                    </li>
-                                </ul>
-                                <div class="account__about">
-                                    <a class="account__name">
-                                        USERNAME
-                                    </a>
-                                    <a class="account__code">
-                                        GYMZ001
-                                    </a>
+                    <button class="button-menu">
+                        <i class="fa-solid fa-bars"></i>
+                    </button>
+                    <div class="content">
+                        <div class="account">
+                            <div class="account-wrapper">
+                                <div class="account-avt">
+                                    <img src="../img/icon/avatar.png" alt="">
                                 </div>
-                                <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
-                            </div>
-                            <a class="content__inner" href="../index.html">
-                                <i class='bx bxs-home'></i>
-                                <span class="noidung__text1">
-                                    TRANG CHỦ
-                                </span>
-                            </a>
-                            <a class="content__inner" href="./chatbox.html">
-                                <i class='bx bx-world'></i>
-                                <span class="noidung__text1">
-                                    CHAT ONLINE
-                                </span>
-                            </a>
-                            <div class="submenu" href="#" onclick="toggleNoidung222(event)">
-                                <b class="content__inner" href="">
-                                    <i class='bx bx-grid-alt'></i>
-                                    <span class="noidung__text1">
-                                        DỊCH VỤ
-                                    </span>
-                                </b>
-                                <div class="noidung222">
-                                    <a class="content__inner" href="#">
-                                        THẺ HỘI VIÊN
-                                    </a>
-                                    <a class="content__inner" href="./personal_trainer.html">
-                                        HUẤN LUYỆN VIÊN
-                                    </a>
-                                    <a class="content__inner" href="./shop.html">
-                                        CỬA HÀNG WHEY
-                                    </a>
+                                <div class="account-ifm">
+                                    <p class="account-fullname">
+                                        full name
+                                    </p>
+                                    <p class="account-code">
+                                        acc001
+                                    </p>
                                 </div>
                             </div>
-                            <a class="content__inner" href="./promotion.html">
-                                <i class='bx bxs-purchase-tag'></i>
-                                <span class="noidung__text1">
-                                    KHUYẾN MÃI
+                            <div class="close-menu">
+                                <button class="button-menu-close">
+                                    <i class="fa-solid fa-xmark"></i>
+                                </button>
+                            </div>
+                            <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
+                        </div>
+                        <div class="content-wrapper">
+                            <a class="content-inner" href="../index.html">
+                                <i class="fa-solid fa-house"></i>
+                                <span class="content-text">
+                                    Trang chủ
                                 </span>
                             </a>
-                            <div class="content__logout">
-                                <div class="content__logout__btn content__inner">
+                            <a class="content-inner" href="../navigation/promotion.html">
+                                <i class="fa-solid fa-gift"></i>
+                                <span class="content-text">
+                                    Khuyến mãi
+                                </span>
+                            </a>
+                            <a class="content-inner" href="../navigation/chatbox.html">
+                                <i class="fa-solid fa-comments"></i>
+                                <span class="content-text">
+                                    Chat online
+                                </span>
+                            </a>
+                            <a class="content-inner" href="../navigation/shop.html">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <span class="content-text">
+                                    Cửa hàng
+                                </span>
+                            </a>
+                            <a class="content-inner" href="../navigation/card.html">
+                                <i class="fa-solid fa-address-card"></i>
+                                <span class="content-text">
+                                    Thẻ thành viên
+                                </span>
+                            </a>
+                            <a class="content-inner" href="../navigation/personal_trainer.html">
+                                <i class="fa-solid fa-person-harassing"></i>
+                                <span class="content-text">
+                                    Huấn luyện viên
+                            </a>
+                            <div class="content-logout">
+                                <a class="content-inner logout">
                                     <!-- <i class='bx bx-code-alt'></i> -->
                                     <i class="bxf fa-solid fa-right-from-bracket"></i>
-                                    <span class="noidung__text1">
-                                        ĐĂNG XUẤT
+                                    <span class="content-text">
+                                        Đăng xuất
                                     </span>
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -541,7 +540,7 @@
     <script type="module" src="../src/toast.js"></script>
     <script type="module" src="../navigation_javascript/chatbox.js"></script>
     <script type="module" src="../navigation_javascript/login.js"></script>
-    <script src="../navigation_javascript/menuv2.js"></script>
+    <script src="../navigation_javascript/menu.js"></script>
     <script type="module" src="../navigation_javascript/input_chatbox.js"></script>
     <script type="module" src="../src/client.js"></script>
 </body>
