update interface shop

--- a/public/navigation/shop.html
+++ b/public/navigation/shop.html
@@ -24,147 +24,87 @@
 </head>
 
 <body>
+    <div class="unavailable">
+        <div class="unavailable-wrapper">
+            <img src="../img/icon/unavailable.png" alt="">
+            <p>
+                This webpage is not available
+                <span>
+                    ERR_CONNECTION_TIMED_OUT
+                </span>
+            </p>
+            <button>
+                Tải lại
+            </button>
+        </div>
+    </div>
     <div class="app">
         <div class="header">
             <div class="header-wrapper">
                 <div class="header-logo">
-                    <h1>
-                        GYM
-                        <span>
-                            Z
-                        </span>
-                    </h1>
-                </div>
-                <div class="header-nav-bar">
-                    <div class="header-nav home">
-                        <a href="../index.html">
-                            <span>TRANG CHỦ</span>
-                        </a>
-                    </div>
-                    <div class="header-nav chat">
-                        <a href="../navigation/chatbox.html">
-                            CHAT ONLINE
-                        </a>
-                    </div>
-                    <div class="header-nav service">
-                        <span>
-                            DỊCH VỤ
-                            <i class="fa-solid fa-play"></i>
-                        </span>
-                        <div class="drop-content">
-                            <div class="content-service">
-                                <a href="../navigation/personal_trainer.html">
-                                    HUẤN LUYỆN VIÊN
-                                </a>
-                            </div>
-                            <div class="content-service">
-                                <a href="../navigation/shop.html">
-                                    CỬA HÀNG WHEY
-                                </a>
-                            </div>
-                            <div class="content-service">
-                                <a href="../navigation/card.html">
-                                    THẺ HỘI VIÊN
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="header-nav promotion">
-                        <a href="../navigation/promotion.html">
-                            KHUYẾN MÃI
-                        </a>
+                    <div class="header-logo-wrapper">
+                        <img src="../img/icon/shop.png" alt="">
                     </div>
                 </div>
-                <div class="header-login">
-                    <div class="user">
-                        <img class="user-avatar" src="../img/icon/avatar.png" alt="">
-                        <div class="submenu-login">
-                            <ion-icon name="caret-up-sharp"></ion-icon>
-                            <div class="menu-login">
-                                <a href="#">
-                                    Đăng nhập
-                                </a>
-                                <a href="../navigation/information_account.html">
-                                    Thẻ thành viên
-                                </a>
-                                <a href="../navigation/information_card_TS.html">
-                                    Lịch tập
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="header__inner__menu">
-                    <button class="button-menu">
-                        <i class="fa-solid fa-bars"></i>
-                    </button>
-                    <div class="content">
-                        <div class="account">
-                            <div class="account-wrapper">
-                                <div class="account-avt">
-                                    <img src="../img/icon/avatar.png" alt="">
-                                </div>
-                                <div class="account-ifm">
-                                    <p class="account-fullname">
-                                        full name
-                                    </p>
-                                    <p class="account-code">
-                                        acc001
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="close-menu">
-                                <button class="button-menu-close">
-                                    <i class="fa-solid fa-xmark"></i>
+                <div class="header-content">
+                    <div class="header-top">
+                        <div class="header-top-options">
+                            <div class="notification">
+                                <button class="notification-button">
+                                    <ion-icon name="notifications-outline"></ion-icon>
+                                    <span>
+                                        Thông báo
+                                    </span>
                                 </button>
                             </div>
-                            <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
-                        </div>
-                        <div class="content-wrapper">
-                            <a class="content-inner" href="../index.html">
-                                <i class="fa-solid fa-house"></i>
-                                <span class="content-text">
-                                    Trang chủ
-                                </span>
-                            </a>
-                            <a class="content-inner" href="../navigation/promotion.html">
-                                <i class="fa-solid fa-gift"></i>
-                                <span class="content-text">
-                                    Khuyến mãi
-                                </span>
-                            </a>
-                            <a class="content-inner" href="../navigation/chatbox.html">
-                                <i class="fa-solid fa-comments"></i>
-                                <span class="content-text">
-                                    Chat online
-                                </span>
-                            </a>
-                            <a class="content-inner" href="../navigation/shop.html">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                <span class="content-text">
-                                    Cửa hàng
-                                </span>
-                            </a>
-                            <a class="content-inner" href="../navigation/card.html">
-                                <i class="fa-solid fa-address-card"></i>
-                                <span class="content-text">
-                                    Thẻ thành viên
-                                </span>
-                            </a>
-                            <a class="content-inner" href="../navigation/personal_trainer.html">
-                                <i class="fa-solid fa-person-harassing"></i>
-                                <span class="content-text">
-                                    Huấn luyện viên
-                            </a>
-                            <div class="content-logout">
-                                <a class="content-inner logout">
-                                    <!-- <i class='bx bx-code-alt'></i> -->
-                                    <i class="bxf fa-solid fa-right-from-bracket"></i>
-                                    <span class="content-text">
-                                        Đăng xuất
+                            <div class="support">
+                                <button class="support-button">
+                                    <ion-icon name="help-circle-outline"></ion-icon>
+                                    <span>
+                                        Hỗ trợ
                                     </span>
-                                </a>
+                                </button>
+                            </div>
+                            <div class="account">
+                                <div class="acount-img">
+                                    <img src="../img/icon/closeAi.jpg" alt="">
+                                </div>
+                                <div class="account-name">
+                                    CloseAi
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="header-search">
+                        <div class="header-search-wrapper">
+                            <div class="search-input">
+                                <div class="input-bar">
+                                    <div class="input-bar-wrapper">
+                                        <input class="input-content" type="text" placeholder="Dụng cụ tập gym">
+                                    </div>
+                                    <div class="button-search-wrapper">
+                                        <button class="search-button">
+                                            <ion-icon name="search-outline"></ion-icon>
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="search-suggest">
+                                    <div>Whey</div>
+                                    <div>Dụng cụ gym</div>
+                                    <div>Quần áo gym</div>
+                                    <div>Giày</div>
+                                    <div>Whey</div>
+                                    <div>Dụng cụ gym</div>
+                                    <div>Quần áo gym</div>
+                                    <div>Giày</div>
+                                </div>
+                            </div>
+                            <div class="header-cart">
+                                <div class="heaeder-cart-wrapper">
+                                    <button class="cart-button">
+                                        <ion-icon name="cart-outline"></ion-icon>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -575,7 +515,8 @@
     </div>
     <!-- overlay -->
     <div class="nen_mo"></div>
-    <!-- <script src="../index.js"></script> -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script type="module" src="../navigation_javascript/loadData.js"></script>
     <script src="../navigation_javascript/menu.js"></script>
     <script src="../navigation_javascript/processChatBox.js"></script>
